[package]
name = "synctivity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
git2 = { version = "0.18.2", features = [] }
regex = "1.10.3"
thiserror = "1.0.56"
